# lwm2m-cpp-core

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-multi-platform.yml
include/lwm2m/: lwm2m_cpp_core.h  lwm2m_cpp_edge.h  lwm2m_to_sdf.h  sdf_to_lwm2m.h
src/: lwm2m_cpp_core.cpp  lwm2m_cpp_edge.cpp  lwm2m_to_sdf.cpp  sdf_to_lwm2m.cpp
